--- a/Journal/Journal/StoryBoards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/StoryBoards/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IiW-5G-GL7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="371.01449275362324" y="-532.36607142857144"/>
+            <point key="canvasLocation" x="372" y="-540"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BSa-db-50H">
