default mood prints

--- a/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9Z2-ah-41i">
                                         <rect key="frame" x="0.0" y="37" width="374" height="32"/>
                                         <segments>
-                                            <segment title="🥳"/>
+                                            <segment title="☀️"/>
                                             <segment title="⛅️"/>
                                             <segment title="🌧"/>
                                         </segments>
@@ -83,6 +83,7 @@
                     <connections>
                         <outlet property="entryBodyTextView" destination="iog-af-24l" id="EXb-SF-BU1"/>
                         <outlet property="entryTitleTextField" destination="9gi-qo-v2b" id="Qxw-d8-Y4O"/>
+                        <outlet property="moodSegmentedControl" destination="9Z2-ah-41i" id="oyM-gj-4k9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
