--- a/Journal/Journal/StoryBoard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/StoryBoard/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-o1-khI">
-                                <rect key="frame" x="20" y="112" width="374" height="298.5"/>
+                                <rect key="frame" x="20" y="112" width="374" height="330"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lj4-MC-4kd">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
@@ -26,17 +26,36 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IDT-hv-FtF">
-                                        <rect key="frame" x="0.0" y="49" width="374" height="249.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="UBB-OK-P7c">
+                                        <rect key="frame" x="0.0" y="49" width="374" height="20.5"/>
                                         <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAu-vm-KLQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IDT-hv-FtF">
+                                        <rect key="frame" x="0.0" y="84.5" width="374" height="245.5"/>
+                                        <subviews>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-dn-m42">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="47"/>
+                                                <segments>
+                                                    <segment title="🙂"/>
+                                                    <segment title="😐"/>
+                                                    <segment title="☹️"/>
+                                                </segments>
+                                            </segmentedControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8e-yk-hW8">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="78.5"/>
+                                                <rect key="frame" x="0.0" y="54" width="374" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ss2-bg-KUx">
-                                                <rect key="frame" x="0.0" y="86.5" width="374" height="163"/>
+                                                <rect key="frame" x="0.0" y="82.5" width="374" height="163"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="163" id="R3k-Rj-Ezv"/>
@@ -50,7 +69,6 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="IDT-hv-FtF" secondAttribute="bottom" id="9VB-7H-kSQ"/>
-                                    <constraint firstItem="IDT-hv-FtF" firstAttribute="top" secondItem="lj4-MC-4kd" secondAttribute="bottom" constant="15" id="a9d-KA-qnY"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -58,7 +76,7 @@
                         <constraints>
                             <constraint firstItem="rbA-o1-khI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="7sv-5p-Ksh"/>
                             <constraint firstItem="rbA-o1-khI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="c7X-nD-GJO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rbA-o1-khI" secondAttribute="bottom" constant="451.5" id="lAj-zm-qYp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rbA-o1-khI" secondAttribute="bottom" constant="420" id="lAj-zm-qYp"/>
                             <constraint firstItem="rbA-o1-khI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="mH1-hj-dPv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -78,6 +96,7 @@
                     <connections>
                         <outlet property="descriptionTextView" destination="ss2-bg-KUx" id="ONI-PP-YJv"/>
                         <outlet property="entryTextField" destination="lj4-MC-4kd" id="ZRx-lB-FdH"/>
+                        <outlet property="moodSegmentedControl" destination="fQ0-dn-m42" id="sS9-gc-bhQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
